Testy/IPP-test.php-master/parse-only/vyzi_tests/should-fail/wrong_arg_type2.src
.IPPcode20
CALL GF@tadi
